--- a/data-loader/infrastructure/k8s/mysql-deployment.yaml
+++ b/data-loader/infrastructure/k8s/mysql-deployment.yaml
@@ -3,30 +3,32 @@ kind: Deployment
 metadata:
   name: mysql
 spec:
+  selector:
+    matchLabels:
+      app: mysql
   strategy:
     type: Recreate
-  selector:
-    matchLabels: { app: mysql }
   template:
     metadata:
-      labels: { app: mysql }
+      labels:
+        app: mysql
     spec:
       containers:
-        - name: mysql
-          image: mysql:8.0
-          env:
-            - name: MYSQL_ROOT_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: mysql-secret
-                  key: password
-          ports:
-            - name: mysql
-              containerPort: 3306
-          volumeMounts:
-            - name: mysql-data
-              mountPath: /var/lib/mysql
+      - image: mysql:latest
+        name: mysql
+        env:
+        - name: MYSQL_ROOT_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: mysql-secret
+              key: password
+        ports:
+        - containerPort: 3306
+          name: mysql
+        volumeMounts:
+        - name: mysql-persistent-storage
+          mountPath: /var/lib/mysql
       volumes:
-        - name: mysql-data
-          persistentVolumeClaim:
-            claimName: mysql-pvc
+      - name: mysql-persistent-storage
+        persistentVolumeClaim:
+          claimName: mysql-pv-claim
