fix: correct storage class name and update PVC size; enhance MySQL service configuration

--- a/data-loader/infrastructure/k8s/mysql-pvc.yaml
+++ b/data-loader/infrastructure/k8s/mysql-pvc.yaml
@@ -3,9 +3,9 @@ kind: PersistentVolumeClaim
 metadata:
   name: mysql-pv-claim
 spec:
-  storageClassName: GP3
+  storageClassName: gp3
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 20Gi
+      storage: 1Gi
