--- a/data-loader/infrastructure/k8s/mysql-service.yaml
+++ b/data-loader/infrastructure/k8s/mysql-service.yaml
@@ -2,13 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mysql
-  namespace: chaims-dev
 spec:
-  type: NodePort 
-  ports:
-    - protocol: TCP
-      port: 3306
-      targetPort: 3306
-      nodePort: 30007
   selector:
     app: mysql
+  ports:
+    - name: mysql
+      protocol: TCP
+      port: 3306
+      targetPort: 3306
+  type: ClusterIP
